--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "scripts": {
         "start": "node index.js",
         "lint": "eslint",
-        "format": "prettier --single-quote --write *.js"    
+        "format": "prettier --single-quote --write *.js",
+        "test": "jest"
     },
     "devDependencies": {
         "eslint": "^7.5.0",
-        "prettier": "^2.0.5"
-      },
+        "jest": "^30.2.0",
+        "prettier": "^2.0.5",
+        "supertest": "^7.2.2"
+    },
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1"
-      },
-      "engines": {
+    },
+    "engines": {
         "node": ">=10"
-      }
+    }
 }
