--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,6 +25,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-{{ matrix.node-version }}-
+
       - name: Install dependencies
         run: npm ci
 
