Add deploy-staging and deploy-prod jobs with OIDC and environments

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,3 +79,59 @@ jobs:
         with:
           name: app-build
           path: dist/
+
+  deploy-staging:
+    needs: build 
+    runs-on: ubuntu-latest
+    environment: staging  
+
+    steps:
+      - name: Checkout code  
+        uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-build
+          path: dist/
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Staging
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: dipendra-staging-app-hthxe6e5cpdgg6dd  
+          package: dist/
+
+  deploy-prod:
+    needs: deploy-staging  
+    runs-on: ubuntu-latest
+    environment: production  
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: app-build
+          path: dist/
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Production
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: dipendra-production-app-cxe9eff4e2atbjhq  
+          package: dist/
